# baymax-agent

./: .gitignore  config.yml  pyproject.toml
src/: hello.py  main.py
src/agent/: __init__.py  models.py
src/agent/agents/: base.py  tool_agent.py
src/agent/graph/: __init__.py  nodes.py  structure.py
src/agent/llm/: __init__.py  deepseek.py  factory.py  zhipuai.py
src/agent/prompts/: tool_agent.py
src/chat/: __init__.py  controller.py  memory.py  models.py
src/chat/memory/: base.py  mongodb.py  redis.py
src/chat/repository/: __init__.py  base.py  in_memory.py  mongodb.py
src/cli/: chat_conversation.py  chat_item.py  main.py  menu.py  prompt.py  service.py  user.py  user_item.py
src/client/: __init__.py  controller.py
src/client/graph/: __init__.py  nodes.py  state.py  structure.py
src/client/llm/: __init__.py  base.py  deepseek.py  factory.py  zhipuai.py
src/config/: __init__.py  manager.py  models.py
src/conversation/: __init__.py  controller.py  memory.py  models.py  repository.py
src/conversation/history/: __init__.py  models.py
src/conversation/memory/: base.py  mongodb.py  redis.py
src/conversation/session/: __init__.py  models.py
src/db/: __init__.py  redis.py
src/injection/: __init__.py  containers.py  providers.py
src/llm/: __init__.py  base.py  deepseek.py  factory.py  utils.py  zhipuai.py
src/monitor/: __init__.py  collector.py  exceptions.py  log.py
src/servers/: calculate_server.py  hello_server.py
src/users/: __init__.py  models.py  repository.py  service.py
src/utils/: __init__.py  asyncio.py  database.py
src/workflow/: __init__.py  nodes.py  structure.py
tests/: test_agent.py  test_config.py  test_db.py  test_llm.py  test_user.py
