[project]
name = "baymax-mcp"
version = "0.1.0"
description = "Baymax AI Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.8.0",
    "langchain-community>=0.3.25",
    "langchain-deepseek>=0.1.3",
    "langchain>=0.3.25",
    "pyjwt>=2.10.1",
    "ruamel-yaml>=0.18.14",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pytest>=8.4.0",
]


[tool.hatch.build.targets.wheel]
packages = [
    "src/clients",
    "src/config",
    "src/servers"
]
